# eo-processor

./: .gitignore  Cargo.toml  Makefile  README.md  benchmark-py312.json  coverage.xml  eo-processor  pyproject.toml  tox.ini
.github/: jules-autofix.yml
.github/workflows/: ci.yml  release.yml  static.yml  tag-release.yml
benchmarking/: cli.py
docs/source/: QUICKSTART.md  conf.py
docs/source/api/: architecture.rst  benchmark-py312.rst  functions.rst  stress-benchmarks.rst
docs/source/api/functions/: evi2.rst  ndsi.rst
examples/: basic_usage.py  map_blocks.py  spatial_distances.py  temporal_sum_composite_example.py  xarray_dask_usage.py
python/eo_processor/: __init__.py  __init__.pyi  cli.py  exceptions.py
scripts/: benchmark.py
src/: classification.rs  indices.rs  lib.rs  masking.rs  processes.rs  spatial.rs  temporal.rs  texture.rs  trends.rs  workflows.rs  zonal.rs
tests/: test_basic.py  test_classification.py  test_cli.py  test_indices.py  test_masking.py  test_spatial.py  test_spatial_distances.py  test_texture.py  test_trends.py  test_workflows.py  test_zonal.py  utils.py
