[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "eo-processor"
version = "0.1.0"
description = "High-performance Rust UDFs for Earth Observation processing"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Ben" }]
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
]
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "maturin>=1.0,<2.0",
]
dask = [
    "dask[array]>=2023.0.0",
    "xarray>=2023.0.0",
]

[tool.maturin]
python-source = "python"
module-name = "eo_processor._core"
features = ["pyo3/extension-module"]
